--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,13 +1,24 @@
 {
-	"item.minecraft.music_disc_13.desc": "Tones And I - Dance Monkey",
-	"item.minecraft.music_disc_cat.desc": "SAINt JHN - Roses (Imanbek Remix)",
-	"item.minecraft.music_disc_blocks.desc": "Fitz and the Tantrums - Out of My League",
-	"item.minecraft.music_disc_chirp.desc": "The Weekend - Blinding Lights",
-	"item.minecraft.music_disc_far.desc": "Vantage - 50//50",
-	"item.minecraft.music_disc_mall.desc": "Krypto9095 - Woah",
-	"item.minecraft.music_disc_mellohi.desc": "Doja Cat - Say So",
-	"item.minecraft.music_disc_stal.desc": "Sub Urban - Cradles",
-	"item.minecraft.music_disc_strad.desc": "Y2K - Lalala",
-	"item.minecraft.music_disc_ward.desc": "Jack Stauber - Buttercup",
-	"item.minecraft.music_disc_wait.desc": "BENEE - Supalonely"
+	"item.minecraft.music_disc_13": "Dance Monkey",
+	"item.minecraft.music_disc_13.desc": "Tones And I",
+	"item.minecraft.music_disc_cat": "Roses (Imanbek Remix)",
+	"item.minecraft.music_disc_cat.desc": "SAINt JHN",
+	"item.minecraft.music_disc_blocks": "Out of My League",
+	"item.minecraft.music_disc_blocks.desc": "Fitz and the Tantrums",
+	"item.minecraft.music_disc_chirp": "Blinding Lights",
+	"item.minecraft.music_disc_chirp.desc": "The Weekend",
+	"item.minecraft.music_disc_far": "50//50",
+	"item.minecraft.music_disc_far.desc": "Vantage",
+	"item.minecraft.music_disc_mall": "Woah",
+	"item.minecraft.music_disc_mall.desc": "Krypto9095",
+	"item.minecraft.music_disc_mellohi": "Say So",
+	"item.minecraft.music_disc_mellohi.desc": "Doja Cat",
+	"item.minecraft.music_disc_stal": "Cradles",
+	"item.minecraft.music_disc_stal.desc": "Sub Urban",
+	"item.minecraft.music_disc_strad": "Lalala",
+	"item.minecraft.music_disc_strad.desc": "Y2K",
+	"item.minecraft.music_disc_ward": "Buttercup",
+	"item.minecraft.music_disc_ward.desc": "Jack Stauber",
+	"item.minecraft.music_disc_wait": "Supalonely",
+	"item.minecraft.music_disc_wait.desc": "BENEE"
 }
